dahlia/jvm/src/test/should-run/dot-product.fuse
import "cassert" {
  def assert(cond: bool);
}

decl a: bit<32>[4];
decl b: bit<32>[4];
decl gold: bit<32>;

let res: bit<32> = 0;
for (let i = 0..4) {
  let v = a[i] * b[i];
} combine {
  res += v;
}

assert(gold == res)
