dahlia/jvm/src/test/should-fail/unroll-without-banks.fuse
decl a: bit<64>[10];

for (let i = 0 .. 10) unroll 2 {
  let x = a[i] + 1;
}
